<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".FormMaterialsActivity">


    <ImageView
        android:id="@+id/chooseMaterialImg"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/choosematerial"
        android:src="@drawable/choosematerial" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/chooseMaterialImg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-10dp">

            <ImageButton
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="90dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/Paper"
                android:onClick="onClickMaterialBlue"
                android:scaleType="fitXY"
                android:src="@drawable/blue" />

            <ImageButton
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="-60dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/Glass"
                android:onClick="onClickMaterialGreen"
                android:scaleType="fitXY"
                android:src="@drawable/green" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp">

            <TextView
                android:id="@+id/blueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-50dp"
                android:text="@string/Paper"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/greenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-80dp"
                android:text="@string/Glass"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-10dp">

            <ImageButton
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="90dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/Metal"
                android:onClick="onClickMaterialRed"
                android:scaleType="fitXY"
                android:src="@drawable/red" />

            <ImageButton
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="-60dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/Plastic"
                android:onClick="onClickMaterialYellow"
                android:scaleType="fitXY"
                android:src="@drawable/yellow" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp">

            <TextView
                android:id="@+id/redText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-50dp"
                android:text="@string/Metal"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/yellowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-80dp"
                android:text="@string/Plastic"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

<!--    <ImageView-->
<!--        android:contentDescription="@string/GoBack"-->
<!--        android:id="@+id/back_arrow"-->
<!--        android:layout_width="61dp"-->
<!--        android:layout_height="55dp"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_marginStart="0dp"-->
<!--        android:layout_marginTop="0dp"-->
<!--        android:layout_marginEnd="0dp"-->
<!--        android:layout_marginBottom="0dp"-->
<!--        android:onClick="onClickBackArrow"-->
<!--        android:src="@drawable/back_to_user" />-->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="50dp"
            android:backgroundTint="#056709"
            android:onClick="onClickSubmit"
            android:text="@string/Submit" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="50dp"
            android:backgroundTint="#056709"
            android:onClick="onClickNext"
            android:visibility="invisible"
            android:text="Results" />

    </RelativeLayout>


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="Account"
        android:foregroundGravity="top|right"
        android:onClick="onClickUser"
        app:srcCompat="@drawable/account_button48" />

</RelativeLayout>
